--- a/termmenu-demo.tex
+++ b/termmenu-demo.tex
@@ -26,7 +26,7 @@
   {
     Write~an~excessively~long~message~to~the~terminal.~
     This~can~be~used~to~test~line-wrapping~functionality.~
-    Don't~use~this~too~often.
+    I~wouldn't~use~this~too~often.
   }
   { \msg_term:n { Wow,~all~of~that~for~nothing. } }
 
